--- a/src/app/movies/movies.component.css
+++ b/src/app/movies/movies.component.css
@@ -62,12 +62,66 @@ li span {
 .selected-movie {
     width : 100%;
     position: relative;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
+    /* display: flex; */
+    /* flex-flow: column wrap;
+    align-items: center; */
 }
 
-@media (min-width: 600px) {
+.flex-grid-thirds {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: justify;
+}
+
+.col {
+    /* background: salmon; */
+    width: 55%;
+}
+.col-poster {
+    width: 25%
+}
+.col-cast {
+    width: 20%;
+    height: 70vh;
+    overflow-y: scroll;
+}
+
+.movie-poster {
+    margin-left : 15px;
+    width: 75%;
+    height: auto;
+    border : 5px solid black;
+    border-radius: 3px!important;
+    text-align:center;
+}
+
+
+.movie-trailer {
+    margin-left : 15px;
+    border : 5px solid black;
+    border-radius: 3px!important;
+    text-align:center;
+    width: auto;
+}
+
+.movie-name {
+    margin-left : 15px;
+    width : 80%;
+    white-space: pre-wrap;
+    word-break: keep-all; 
+    text-align:left;    
+}
+.movie-overview {
+    margin : 0 auto;
+    padding : 0;
+    width : 90%;
+    white-space: pre-wrap;
+    word-break: keep-all; 
+    text-align:left;
+}
+
+
+/* @media (min-width: 600px) {
     .movie-poster {
         margin : 15px auto 0 auto;
         width: auto;
@@ -91,31 +145,63 @@ li span {
         word-break: keep-all; 
         text-align:center;
     }
+} */
+
+@media (max-width: 900px) {
+    
+    .flex-grid-thirds {
+        display: block;
+      }
+      .flex-grid .col,
+      .flex-grid-thirds .col {
+        width: 100%;
+        margin: 0 0 10px 0;
+    }
+    .selected-movie {
+        width : 100%;
+        position: relative;
+        display: flex; 
+        flex-flow: column wrap;
+        align-items: center;
+    }
+    .movie-poster {
+        margin : 5px 0;
+    }    
 }
 
-@media (max-width: 600px) {
-    .movie-poster {
-        margin : 15px auto 0 auto;
-        width: auto;
-        height: 60vh;
-        border : 5px solid black;
-        border-radius: 3px!important;
-        text-align:center;
-    }
+.col-poster {
+    min-width: 155px;
+}
 
-    .movie-name {
-        margin : 5px 0;
-        width : 80%;
-        white-space: pre-wrap;
-        word-break: keep-all; 
-        text-align:center;
-    }
-    .movie-overview {
-        margin : 0 auto;
-        padding : 0;
-        width : 90%;
-        white-space: pre-wrap;
-        word-break: keep-all; 
-        text-align:center;
-    }
+.casts {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+}
+
+.movie-cast {
+    width: 40%;
+    height: auto;
+    border : 5px solid black;
+    border-radius: 3px;
+}
+
+.casts .cast {
+    padding: 15px 0;
+    width: 50%;
+    text-align: center;
+    /* padding: 20px; */
+}
+
+.cast-header {
+    margin : 0;
+    text-align : center;
+}
+.trailer-clip {
+    width: 100%;
+    height: auto;
+    overflow:hidden;
+    text-align: center;
+    margin-top: 20px;
 }
