--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,9 +5,9 @@
         <label for="navbar-toggle"><i></i></label>
         <nav class="menu">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#home">Movie</a></li>
+                <li><a href="#about">Tv Series</a></li>
+                <li><a href="#portfolio">Actors</a></li>
             </ul>
         </nav>        
     </div>
