--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <div class="header header-fixed">
     <div class="navbar container">
-        <div class="logo"><a href="#home">LOGO</a></div>
+        <div class="logo"><a href="movie">LOGO</a></div>
         <input type="checkbox" id="navbar-toggle" >
         <label for="navbar-toggle"><i></i></label>
         <nav class="menu">
             <ul>
-                <li><a href="#home">Movie</a></li>
-                <li><a href="#about">Tv Series</a></li>
+                <li><a href="movie">Movie</a></li>
+                <li><a href="tv">Tv Series</a></li>
                 <li><a href="#portfolio">Actors</a></li>
             </ul>
         </nav>        
